--- a/style.css
+++ b/style.css
@@ -1,14 +1,4 @@
-/* ::root {
-} */
-
-.company {
-    color: rgb(149, 44, 255);
-    position: absolute;
-    margin-left: 1.4rem;
-    font-size: 2rem;
-    cursor: pointer;
-}
-
+/* Page setup */
 * {
     font-family: 'Roboto Mono';
 }
@@ -18,6 +8,25 @@ body {
     background-color: rgb(0, 0, 0);
 }
 
+
+/* Page container */
+.container {
+    display: flex;
+    flex-direction: row;
+}
+
+
+/* Branding */
+.company {
+    color: rgb(149, 44, 255);
+    position: absolute;
+    margin-left: 1.4rem;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+
+/* Animated visual */
 .picture {
     background-color: rgb(26, 26, 26);
     background-size: contain;
@@ -32,34 +41,31 @@ body {
     top: 10rem;
 }
 
-.logo {
-    font-weight: 700;
-    font-size: 4rem;
-    position: relative;
-    top: 12rem;
-    display: flex;
-    justify-content: center;
-    /* background-color: rgba(0, 0, 0, 0.639); */
-    background-color: rgb(0,0,0,0.75);
-    padding: 1rem 0 2rem 0;
-}
 
-.container {
-    display: flex;
-    flex-direction: row;
-}
-
+/* Right side of page container */
 .right {
     width: 60vw;
     height: 100vh;
     background-color: rgb(49, 40, 26)
 }
 
+
+/* Sets base font color */
+.top,
+.middle,
+.existing-account {
+    color: rgb(172, 172, 172);
+}
+
+
+/* "Join" text */
 .top {
     font-size: 2.4rem;
     margin: 7rem 3rem 0 3rem;
 }
 
+
+/* Inputs container */
 .middle {
     font-size: 1.2rem;
     background-color: rgb(26, 26, 26);
@@ -69,10 +75,35 @@ body {
     flex-direction: column;
 }
 
+
+/* Form formatting */
+form {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 20px 80px;
+}
+
+
+/* Password confirmation field styling */
+#user-password-confirm {
+    background-color: rgb(40, 40, 40);
+    pointer-events: none;
+}
+
+
+/* Create button and existing login container */
+.bot {
+    display: flex;
+    flex-direction: column;
+    padding: 1.6rem 0 3.6rem 3rem;
+    background-color: rgb(26, 26, 26);
+}
+
+
+/* Create button */
 .create-account {
     padding: 1.2rem 1rem;
     width: max-content;
-    /* background-color: rgb(149, 44, 255); */
     background-color: rgb(74, 0, 149);
     border-radius: 4px;
     cursor: pointer;
@@ -99,15 +130,8 @@ body {
     background-color: rgb(116, 36, 197);
 }
 
-#user-password-confirm {
-    background-color: rgb(40, 40, 40);
-    pointer-events: none;
-}
 
-.existing-account {
-    color: rgb(165, 165, 165);
-}
-
+/* Existing account login */
 .existing-login {
     color: rgb(149, 44, 255);
     transition: all .1s ease-out;
@@ -115,17 +139,16 @@ body {
     user-select: none;
 }
 
-.existing-login:hover {
-    transform: scale(1.02);
-}
 
-.bot {
+/* Individual input containers */
+.input {
     display: flex;
-    flex-direction: column;
-    padding: 1.6rem 0 3.6rem 3rem;
-    background-color: rgb(26, 26, 26);
+    flex-flow: column wrap;
+    width: 35%;
 }
 
+
+/* Input fields formatting */
 label {
     font-size: .75rem;
     padding-bottom: .2rem;
@@ -136,17 +159,10 @@ input {
     background-color: rgb(70, 70, 70);
     color: rgb(172, 172, 172);
     transition: all .16s ease-out;
-    /* border: none; */
     border-radius: 2px;
     margin-bottom: 4px;
     border: 1px solid rgb(0,0,0,.4);
     box-sizing: border-box;
-}
-
-.error {
-    font-size: .75rem;
-    color: rgb(255, 81, 81);
-    user-select: none;
 }
 
 input:focus {
@@ -154,34 +170,12 @@ input:focus {
     border: 1.2px solid violet;
     outline: none;
     box-shadow: 0 0 5px rgb(0,0,0,.3);
-  }  
+}  
 
-.input {
-    display: flex;
-    flex-flow: column wrap;
-    width: 35%;
+
+/* Errors that appear under the inputs */
+.error {
+    font-size: .75rem;
+    color: rgb(255, 81, 81);
+    user-select: none;
 }
-
-input:-webkit-autofill,
-input:-webkit-autofill:focus {
-    transition: background-color 600000s 0s, color 600000s 0s;
-}
-
-form {
-    display: flex;
-    flex-flow: row wrap;
-    gap: 20px 80px;
-}
-
-.top,
-.middle,
-.logo {
-    color: rgb(172, 172, 172);
-}
-
-/* Right side */
-/* .top,
-.middle,
-.bot {
-
-} */
